feat: Add API Spec for Cart service
